<resources>

    <string name="app_name">UniPubSub</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">UniPubSub</string>
    <string name="createButton">Create Topic</string>
    <string name="publishButton">Publish To Topic</string>
    <string name="title_activity_create_topic">Create Topic</string>
    <string name="title_activity_publish_to_topic">Publish To Topic</string>
    <string name="publish_message">Enter message to publish</string>
    <string name="submit">Publish</string>
    <string name="topicMessage">Enter topic</string>
    <string name="creatingWait">Creating topic&#8230;</string>
    <string name="emailText">Enter email address</string>
    <string name="subscribeButton">Subscribe To Topic</string>
    <string name="title_activity_subscribe_to_topic">SubscribeToTopic</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_university_selection">UniversitySelection</string>
    <string name="universitySelect_button">Submit</string>
    <string name="selectcategory">Select Category</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="searchText">Search for topics</string>
    <string name="searchResults">Search</string>
    <string name="searchbackButton">Back</string>
    <string name="selectState">Select State</string>
    <string name="selectUniversity">Select University</string>
    <string name="Search">Search Topics</string>

</resources>